Add native access flag to wrapper script